// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should ask users if they want to submit article when user say not found 1`] = `
Object {
  "data": Object {
    "foundArticleIds": Array [
      "AV8d2-YtyCdS-nWhuhdi",
    ],
    "searchedText": "這一篇文章確實是一個轉傳文章，他夠長，看起來很轉傳，但是使用者覺得資料庫裡沒有。",
    "selectedArticleId": undefined,
  },
  "event": Object {
    "input": "0",
    "message": Object {
      "id": "7045918737413",
      "text": "0",
      "type": "text",
    },
    "timestamp": 1511633232479,
    "type": "message",
  },
  "isSkipUser": false,
  "issuedAt": 1511633232970,
  "replies": Array [
    Object {
      "altText": "【送出訊息到公開資料庫？】
若這是「轉傳訊息」，而且您覺得這很可能是一則「謠言」，請將這則訊息送進公開資料庫建檔，讓好心人查證與回覆。

雖然您不會立刻收到查證結果，但可以幫助到未來同樣收到這份訊息的人。

請按左下角「⌨️」鈕，把「為何您會覺得這是一則謠言」的理由傳給我們，幫助闢謠編輯釐清您有疑惑之處。
若想放棄，請輸入「n」。",
      "contents": Object {
        "body": Object {
          "contents": Array [
            Object {
              "size": "xxs",
              "text": "若這是「轉傳訊息」，而且您覺得這很可能是一則「謠言」，請將這則訊息送進公開資料庫建檔，讓好心人查證與回覆。",
              "type": "text",
              "wrap": true,
            },
            Object {
              "size": "xxs",
              "text": "雖然您不會立刻收到查證結果，但可以幫助到未來同樣收到這份訊息的人。",
              "type": "text",
              "wrap": true,
            },
            Object {
              "color": "#990000",
              "size": "md",
              "text": "請打字告訴我們：",
              "type": "text",
              "weight": "bold",
              "wrap": true,
            },
            Object {
              "color": "#ff0000",
              "size": "xxl",
              "text": "為何您會覺得這是一則謠言？",
              "type": "text",
              "weight": "bold",
              "wrap": true,
            },
          ],
          "layout": "vertical",
          "spacing": "md",
          "type": "box",
        },
        "footer": Object {
          "contents": Array [
            Object {
              "action": Object {
                "data": "{\\"input\\":\\"n\\",\\"issuedAt\\":1511633232970}",
                "label": "放棄送出",
                "type": "postback",
              },
              "type": "button",
            },
            Object {
              "action": Object {
                "label": "⌨️ 傳理由給我們",
                "type": "uri",
                "uri": "line://oaMessage/@cofacts/?%E5%9B%A0%E7%82%BA%E2%8B%AF%E2%8B%AF",
              },
              "style": "primary",
              "type": "button",
            },
          ],
          "layout": "vertical",
          "type": "box",
        },
        "header": Object {
          "contents": Array [
            Object {
              "color": "#009900",
              "size": "sm",
              "text": "送出訊息到公開資料庫？",
              "type": "text",
              "weight": "bold",
            },
          ],
          "layout": "horizontal",
          "type": "box",
        },
        "type": "bubble",
      },
      "type": "flex",
    },
  ],
  "state": "ASKING_ARTICLE_SUBMISSION_REASON",
  "userId": "Uc76d8ae9ccd1ada4f06c4e1515d46466",
}
`;

exports[`should block user from submitting articles that is too short 1`] = `
Object {
  "data": Object {
    "foundArticleIds": Array [
      "AV8d2-YtyCdS-nWhuhdi",
    ],
    "searchedText": "這真的假的？？！！！？？！",
    "selectedArticleId": undefined,
  },
  "event": Object {
    "input": "0",
    "message": Object {
      "id": "7045918737413",
      "text": "0",
      "type": "text",
    },
    "timestamp": 1511633232479,
    "type": "message",
  },
  "isSkipUser": false,
  "issuedAt": 1511633232970,
  "replies": Array [
    Object {
      "text": "剛才您傳的訊息資訊量太少，編輯無從查證。
查證範圍請參考📖使用手冊 http://bit.ly/cofacts-line-users",
      "type": "text",
    },
  ],
  "state": "__INIT__",
  "userId": "Uc76d8ae9ccd1ada4f06c4e1515d46466",
}
`;

exports[`should select article and have OPINIONATED and NOT_ARTICLE replies 1`] = `
Object {
  "data": Object {
    "foundArticleIds": Array [
      "AV8d2-YtyCdS-nWhuhdi",
    ],
    "foundReplyIds": Array [
      "AV8fXikZyCdS-nWhuhfN",
      "AV--O3nfyCdS-nWhujMD",
      "AV--LRZYyCdS-nWhujL9",
      "AV8jkRlByCdS-nWhuhiY",
    ],
    "searchedText": "老榮民九成存款全部捐給慈濟，如今窮了卻得不到慈濟醫院社工的幫忙，竟翻臉不認人",
    "selectedArticleId": "AV8d2-YtyCdS-nWhuhdi",
    "selectedArticleText": "老榮民九成存款全部捐給慈濟，如今窮了卻得不到慈濟醫院社工的幫忙，竟翻臉不認人",
  },
  "event": Object {
    "input": "1",
    "message": Object {
      "id": "7045918737413",
      "text": "1",
      "type": "text",
    },
    "timestamp": 1511633232479,
    "type": "message",
  },
  "isSkipUser": false,
  "issuedAt": 1511633232970,
  "replies": Array [
    Object {
      "text": "這個訊息有：
1 則回應標成 ❌ 含有不實訊息
0 則回應標成 ⭕ 含有真實訊息
1 則回應標成 💬 含有個人意見
2 則回應標成 ⚠️️ 不在查證範圍
",
      "type": "text",
    },
    Object {
      "altText": "閱讀請傳 1> 💬 含有個人意見
[還沒有人針對此回應評價]
慈濟自來有褒有貶，每人有各自的看法。

閱讀請傳 2> ❌ 含有不實訊息
[有 3 人覺得此回應有幫助]
老榮民有住所，有月退俸，也不需要特別的醫療護理，因此較適合榮民之家養老，慈濟也一直關懷陪伴。護理之家有免費方案，入住資格和有無

閱讀請傳 3> ⚠️️ 不在查證範圍
[還沒有人針對此回應評價]
整個基督教徒的打手，自己不努力去牧人、募款，利用攻擊別人，三分真七分假，更利用多帳號來造勢及造風向，害我也差點相信了，各位有智

閱讀請傳 4> ⚠️️ 不在查證範圍
[還沒有人針對此回應評價]
文章是假的 照片也是盜用我方家人的照片,嚴重影響我家人名譽,我方已對po文的人聯絡並打算提出告訴,請勿相信謠言.",
      "template": Object {
        "columns": Array [
          Object {
            "actions": Array [
              Object {
                "data": "{\\"input\\":1,\\"issuedAt\\":1511633232970}",
                "label": "閱讀此回應",
                "type": "postback",
              },
            ],
            "text": "💬 含有個人意見
[還沒有人針對此回應評價]
慈濟自來有褒有貶，每人有各自的看法。",
          },
          Object {
            "actions": Array [
              Object {
                "data": "{\\"input\\":2,\\"issuedAt\\":1511633232970}",
                "label": "閱讀此回應",
                "type": "postback",
              },
            ],
            "text": "❌ 含有不實訊息
[有 3 人覺得此回應有幫助]
老榮民有住所，有月退俸，也不需要特別的醫療護理，因此較適合榮民之家養老，慈濟也一直關懷陪伴。護理之家有免費方案，入住資格和有無捐款沒有關係。
慈善機構使用資源需",
          },
          Object {
            "actions": Array [
              Object {
                "data": "{\\"input\\":3,\\"issuedAt\\":1511633232970}",
                "label": "閱讀此回應",
                "type": "postback",
              },
            ],
            "text": "⚠️️ 不在查證範圍
[還沒有人針對此回應評價]
整個基督教徒的打手，自己不努力去牧人、募款，利用攻擊別人，三分真七分假，更利用多帳號來造勢及造風向，害我也差點相信了，各位有智慧的看官，看過之後，笑一笑即可，別",
          },
          Object {
            "actions": Array [
              Object {
                "data": "{\\"input\\":4,\\"issuedAt\\":1511633232970}",
                "label": "閱讀此回應",
                "type": "postback",
              },
            ],
            "text": "⚠️️ 不在查證範圍
[還沒有人針對此回應評價]
文章是假的 照片也是盜用我方家人的照片,嚴重影響我家人名譽,我方已對po文的人聯絡並打算提出告訴,請勿相信謠言.",
          },
        ],
        "type": "carousel",
      },
      "type": "template",
    },
  ],
  "state": "CHOOSING_REPLY",
  "userId": "Uc76d8ae9ccd1ada4f06c4e1515d46466",
}
`;

exports[`should select article and slice replies when over 10 1`] = `
Object {
  "data": Object {
    "foundArticleIds": Array [
      "AV8d2-YtyCdS-nWhuhdi",
    ],
    "foundReplyIds": Array [
      "AV--O3nfyCdS-nWhujMD",
      "AV--O3nfyCdS-nWhujMD",
      "AV8fXikZyCdS-nWhuhfN",
      "AV--O3nfyCdS-nWhujMD",
      "AV--O3nfyCdS-nWhujMD",
      "AV--O3nfyCdS-nWhujMD",
      "AV--O3nfyCdS-nWhujMD",
      "AV--O3nfyCdS-nWhujMD",
      "AV--O3nfyCdS-nWhujMD",
      "AV--LRZYyCdS-nWhujL9",
      "AV8jkRlByCdS-nWhuhiY",
    ],
    "searchedText": "老榮民九成存款全部捐給慈濟，如今窮了卻得不到慈濟醫院社工的幫忙，竟翻臉不認人",
    "selectedArticleId": "AV8d2-YtyCdS-nWhuhdi",
    "selectedArticleText": "eleven Replies article text",
  },
  "event": Object {
    "input": "1",
    "message": Object {
      "id": "7045918737413",
      "text": "1",
      "type": "text",
    },
    "timestamp": 1511633232479,
    "type": "message",
  },
  "isSkipUser": false,
  "issuedAt": 1511633232970,
  "replies": Array [
    Object {
      "text": "這個訊息有：
6 則回應標成 ❌ 含有不實訊息
2 則回應標成 ⭕ 含有真實訊息
1 則回應標成 💬 含有個人意見
2 則回應標成 ⚠️️ 不在查證範圍
",
      "type": "text",
    },
    Object {
      "altText": "閱讀請傳 1> ❌ 含有不實訊息
[還沒有人針對此回應評價]
回

閱讀請傳 2> ❌ 含有不實訊息
[還沒有人針對此回應評價]
回

閱讀請傳 3> 💬 含有個人意見
[還沒有人針對此回應評價]


閱讀請傳 4> ❌ 含有不實訊息
[還沒有人針對此回應評價]
回

閱讀請傳 5> ❌ 含有不實訊息
[還沒有人針對此回應評價]
回

閱讀請傳 6> ⭕ 含有真實訊息
[還沒有人針對此回應評價]
回

閱讀請傳 7> ⭕ 含有真實訊息
[還沒有人針對此回應評價]
回

閱讀請傳 8> ❌ 含有不實訊息
[還沒有人針對此回應評價]
回

閱讀請傳 9> ❌ 含有不實訊息
[還沒有人針對此回應評價]
回

閱讀請傳 10> ⚠️️ 不在查證範圍
[還沒有人針對此回應評價]
回應7。",
      "template": Object {
        "columns": Array [
          Object {
            "actions": Array [
              Object {
                "data": "{\\"input\\":1,\\"issuedAt\\":1511633232970}",
                "label": "閱讀此回應",
                "type": "postback",
              },
            ],
            "text": "❌ 含有不實訊息
[還沒有人針對此回應評價]
回應11",
          },
          Object {
            "actions": Array [
              Object {
                "data": "{\\"input\\":2,\\"issuedAt\\":1511633232970}",
                "label": "閱讀此回應",
                "type": "postback",
              },
            ],
            "text": "❌ 含有不實訊息
[還沒有人針對此回應評價]
回應10",
          },
          Object {
            "actions": Array [
              Object {
                "data": "{\\"input\\":3,\\"issuedAt\\":1511633232970}",
                "label": "閱讀此回應",
                "type": "postback",
              },
            ],
            "text": "💬 含有個人意見
[還沒有人針對此回應評價]
回應9",
          },
          Object {
            "actions": Array [
              Object {
                "data": "{\\"input\\":4,\\"issuedAt\\":1511633232970}",
                "label": "閱讀此回應",
                "type": "postback",
              },
            ],
            "text": "❌ 含有不實訊息
[還沒有人針對此回應評價]
回應6",
          },
          Object {
            "actions": Array [
              Object {
                "data": "{\\"input\\":5,\\"issuedAt\\":1511633232970}",
                "label": "閱讀此回應",
                "type": "postback",
              },
            ],
            "text": "❌ 含有不實訊息
[還沒有人針對此回應評價]
回應5",
          },
          Object {
            "actions": Array [
              Object {
                "data": "{\\"input\\":6,\\"issuedAt\\":1511633232970}",
                "label": "閱讀此回應",
                "type": "postback",
              },
            ],
            "text": "⭕ 含有真實訊息
[還沒有人針對此回應評價]
回應4",
          },
          Object {
            "actions": Array [
              Object {
                "data": "{\\"input\\":7,\\"issuedAt\\":1511633232970}",
                "label": "閱讀此回應",
                "type": "postback",
              },
            ],
            "text": "⭕ 含有真實訊息
[還沒有人針對此回應評價]
回應3",
          },
          Object {
            "actions": Array [
              Object {
                "data": "{\\"input\\":8,\\"issuedAt\\":1511633232970}",
                "label": "閱讀此回應",
                "type": "postback",
              },
            ],
            "text": "❌ 含有不實訊息
[還沒有人針對此回應評價]
回應2",
          },
          Object {
            "actions": Array [
              Object {
                "data": "{\\"input\\":9,\\"issuedAt\\":1511633232970}",
                "label": "閱讀此回應",
                "type": "postback",
              },
            ],
            "text": "❌ 含有不實訊息
[還沒有人針對此回應評價]
回應1",
          },
          Object {
            "actions": Array [
              Object {
                "data": "{\\"input\\":10,\\"issuedAt\\":1511633232970}",
                "label": "閱讀此回應",
                "type": "postback",
              },
            ],
            "text": "⚠️️ 不在查證範圍
[還沒有人針對此回應評價]
回應7。
",
          },
        ],
        "type": "carousel",
      },
      "type": "template",
    },
    Object {
      "text": "更多回應請到：https://cofacts.g0v.tw/article/AV8d2-YtyCdS-nWhuhdi",
      "type": "text",
    },
  ],
  "state": "CHOOSING_REPLY",
  "userId": "Uc76d8ae9ccd1ada4f06c4e1515d46466",
}
`;

exports[`should select article by articleId 1`] = `
Object {
  "data": Object {
    "foundArticleIds": Array [
      "AVyyB61NyCdS-nWhuakC",
      "AV4sEcSHyCdS-nWhufEX",
      "5478658696099-rumor",
    ],
    "foundReplyIds": Array [
      "AVy6LkWIyCdS-nWhuaqu",
      "AVygFA0RyCdS-nWhuaXY",
    ],
    "searchedText": "《緊急通知》
台北馬偕醫院傳來訊息：
資深醫生（林清風）傳來：「請大家以後千萬不要再吃生魚片了！」
因為最近已經發現- 好多病人因為吃了生魚片，胃壁附著《海獸胃腺蟲》，大小隻不一定，有的病人甚至胃壁上滿滿都是無法夾出來，驅蟲藥也很難根治，罹患機率每個國家的人都一樣。
尤其；鮭魚的含蟲量最高、最可怕！
請傳給朋友，讓他們有所警惕!",
    "selectedArticleId": "AVyyB61NyCdS-nWhuakC",
    "selectedArticleText": "《緊急通知》
台北馬偕醫院傳來訊息：
資深醫生（林清風）傳來：「請大家以後千萬不要再吃生魚片了！」
因為最近已經發現- 好多病人因為吃了生魚片，胃壁附著《海獸胃腺蟲》，大小隻不一定，有的病人甚至胃壁上滿滿都是無法夾出來，驅蟲藥也很難根治，罹患機率每個國家的人都一樣。
尤其；鮭魚的含蟲量最高、最可怕！
請傳給朋友，讓他們有所警惕!",
  },
  "event": Object {
    "input": "1",
    "message": Object {
      "id": "6691804381697",
      "text": "1",
      "type": "text",
    },
    "timestamp": 1505314293406,
    "type": "message",
  },
  "isSkipUser": false,
  "issuedAt": 1505314295017,
  "replies": Array [
    Object {
      "text": "這個訊息有：
2 則回應標成 ❌ 含有不實訊息
0 則回應標成 ⭕ 含有真實訊息
0 則回應標成 💬 含有個人意見
0 則回應標成 ⚠️️ 不在查證範圍
",
      "type": "text",
    },
    Object {
      "altText": "閱讀請傳 1> ❌ 含有不實訊息
[有 24 人覺得此回應有幫助]
過去台灣只有一個海獸胃腺蟲鑽入胃壁的病例，而且僅有一隻蟲。而經查詢，台北馬偕醫院也沒有名為林清風的醫師。

閱讀請傳 2> ❌ 含有不實訊息
[有 14 人覺得此回應有幫助
有 2 人覺得此回應沒幫助]
查證這則謠言的過程中，約翰走鹿也發現其實網路早就有許多解答，就讓約翰走鹿來借花獻佛一下囉。多家媒體都有針對這則「吃生魚片會有海獸胃腺蟲附著胃壁」的謠言請教醫師，受訪的醫師們皆表示，這則謠言太誇大，海獸胃腺蟲沒那麼神通廣大。
醫師們表示，台灣的衛生條件很進步，吃生魚片被寄生蟲寄生的案例很少，大部份",
      "template": Object {
        "columns": Array [
          Object {
            "actions": Array [
              Object {
                "data": "{\\"input\\":1,\\"issuedAt\\":1505314295017}",
                "label": "閱讀此回應",
                "type": "postback",
              },
            ],
            "text": "❌ 含有不實訊息
[有 24 人覺得此回應有幫助]
過去台灣只有一個海獸胃腺蟲鑽入胃壁的病例，而且僅有一隻蟲。而經查詢，台北馬偕醫院也沒有名為林清風的醫師。",
          },
          Object {
            "actions": Array [
              Object {
                "data": "{\\"input\\":2,\\"issuedAt\\":1505314295017}",
                "label": "閱讀此回應",
                "type": "postback",
              },
            ],
            "text": "❌ 含有不實訊息
[有 14 人覺得此回應有幫助
有 2 人覺得此回應沒幫助]
查證這則謠言的過程中，約翰走鹿也發現其實網路早就有許多解答，就讓約翰走鹿來借花獻佛一下囉。多家媒體都有針對這則「吃生魚片會有海獸胃腺蟲附著胃壁」的謠言請教醫師，",
          },
        ],
        "type": "carousel",
      },
      "type": "template",
    },
  ],
  "state": "CHOOSING_REPLY",
  "userId": "Uc76d8ae9ccd1ada4f06c4e1515d46466",
}
`;

exports[`should select article with no replies 1`] = `
Object {
  "data": Object {
    "foundArticleIds": Array [
      "AV_4WX8vyCdS-nWhujyH",
    ],
    "searchedText": "老司機車裡總備一塊香皂，知道內情的新手默默也準備了一塊",
    "selectedArticleId": "AV_4WX8vyCdS-nWhujyH",
    "selectedArticleText": "老司機車裡總備一塊香皂，知道內情的新手默默也準備了一塊",
  },
  "event": Object {
    "input": "1",
    "message": Object {
      "id": "7049700770815",
      "text": "1",
      "type": "text",
    },
    "timestamp": 1511702208226,
    "type": "message",
  },
  "isSkipUser": false,
  "issuedAt": 1511702208730,
  "replies": Array [
    Object {
      "altText": "【跟編輯說您的疑惑】
抱歉這篇訊息還沒有人回應過唷！

若您覺得這是一則謠言，請指出您有疑惑之處，說服編輯這是一份應該被闢謠的訊息。

請按左下角「⌨️」鈕，把「為何您會覺得這是一則謠言」的理由傳給我們，幫助闢謠編輯釐清您的疑惑；
若想跳過，請輸入「n」。",
      "contents": Object {
        "body": Object {
          "contents": Array [
            Object {
              "size": "xxs",
              "text": "抱歉這篇訊息還沒有人回應過唷！",
              "type": "text",
              "wrap": true,
            },
            Object {
              "size": "xxs",
              "text": "若您覺得這是一則謠言，請指出您有疑惑之處，說服編輯這是一份應該被闢謠的訊息，幫助闢謠編輯釐清您有疑惑之處。",
              "type": "text",
              "wrap": true,
            },
            Object {
              "color": "#990000",
              "size": "md",
              "text": "請打字告訴我們：",
              "type": "text",
              "weight": "bold",
              "wrap": true,
            },
            Object {
              "color": "#ff0000",
              "size": "xxl",
              "text": "為何您會覺得這是一則謠言？",
              "type": "text",
              "weight": "bold",
              "wrap": true,
            },
          ],
          "layout": "vertical",
          "spacing": "md",
          "type": "box",
        },
        "footer": Object {
          "contents": Array [
            Object {
              "action": Object {
                "data": "{\\"input\\":\\"n\\",\\"issuedAt\\":1511702208730}",
                "label": "我不想填理由",
                "type": "postback",
              },
              "type": "button",
            },
            Object {
              "action": Object {
                "label": "⌨️ 傳理由給我們",
                "type": "uri",
                "uri": "line://oaMessage/@cofacts/?%E5%9B%A0%E7%82%BA%E2%8B%AF%E2%8B%AF",
              },
              "style": "primary",
              "type": "button",
            },
          ],
          "layout": "vertical",
          "type": "box",
        },
        "header": Object {
          "contents": Array [
            Object {
              "color": "#009900",
              "size": "sm",
              "text": "跟編輯說您的疑惑",
              "type": "text",
              "weight": "bold",
            },
          ],
          "layout": "horizontal",
          "type": "box",
        },
        "type": "bubble",
      },
      "type": "flex",
    },
  ],
  "state": "ASKING_REPLY_REQUEST_REASON",
  "userId": "Uc76d8ae9ccd1ada4f06c4e1515d46466",
}
`;
